canceled start work with colors, back to main functionality

--- a/app/src/main/res/drawable/backgroundcolorrecycler.xml
+++ b/app/src/main/res/drawable/backgroundcolorrecycler.xml
@@ -8,6 +8,8 @@
         android:right="7dp"
         android:bottom="7dp" />
     <gradient
+        android:startColor="#81D4FA"
+        android:endColor="#4FC3F7"
         android:angle="45">
     </gradient>
 </shape>
