in process to add frequency in TaskDetailsActivity

--- a/app/src/main/res/layout/activity_taskdetails.xml
+++ b/app/src/main/res/layout/activity_taskdetails.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    style="@style/MainActivityBackground">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="afsadfasdf"
+        android:textSize="30sp"
+        android:backgroundTint="@color/actionbarcolor"
+        android:background="@drawable/dialog_bg"
+        android:layout_margin="16dp"/>
 
     <LinearLayout
         android:id="@+id/infolayout"
@@ -41,14 +51,28 @@
         android:id="@+id/setDateButton"
         android:layout_width="match_parent"
         android:layout_height="110dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:layout_alignParentBottom="true"
         android:background="@drawable/dialog_bg"
-        android:backgroundTint="@color/teal_700"
         android:cropToPadding="false"
-        android:text="@string/setfreq"/>
+        android:text="@string/setfreq" />
+
+    <Button
+        android:id="@+id/done"
+        android:layout_width="match_parent"
+        android:layout_height="110dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/dialog_bg"
+
+        android:cropToPadding="false"
+        android:text="@string/done"
+        android:visibility="visible"/>
 
 </RelativeLayout>
