--- a/app/src/main/res/menu/menu_activity_taskdetails.xml
+++ b/app/src/main/res/menu/menu_activity_taskdetails.xml
@@ -5,5 +5,8 @@
         android:id="@+id/delete_task_button"
         android:title="@string/deletetask"
         android:icon="@drawable/ic_baseline_delete_outline_24" />
+    <item
+        android:id="@+id/edit_task_button"
+        android:title="@string/edittask" />
 
 </menu>
